# slopless-cli

./: .gitignore  LICENSE  README.md  TESTING.md  action.yml  install.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: slopless-gate.sh
.claude/skills/scan/: SKILL.md
command-center/: .env.example  .gitignore  Dockerfile  README.md  railway.toml  setup.sh  start.sh
command-center/deploy/: entrypoint.sh
command-center/rules/: code-architecture.md  commit-standards.md  pr-quality.md  security-baseline.md
command-center/skills/adopt-workstream/: SKILL.md
command-center/skills/context-migration/: SKILL.md
command-center/skills/credentials/: SKILL.md
command-center/skills/feature-branch/: SKILL.md
command-center/skills/feature-request/: SKILL.md
command-center/skills/git-signing/: SKILL.md
command-center/skills/notion-integration/: SKILL.md
command-center/skills/pr-create/: SKILL.md
command-center/skills/pr-review/: SKILL.md
command-center/skills/pr-workflow/: SKILL.md
command-center/skills/preview-build/: SKILL.md
command-center/skills/project-manager/: SKILL.md
command-center/skills/scan-fix-loop/: SKILL.md
command-center/skills/slopless-scan/: SKILL.md
docs/: LOCAL_SCAN.md
slopless/: __init__.py  cli.py  config.py  latex.py  local_scan.py  notion.py  pdf_summary.py
tests/: test_latex.py
